--- a/Grupo 7A/Grupo 7A.csproj
+++ b/Grupo 7A/Grupo 7A.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmAdministrar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAdministrar.Designer.cs">
+      <DependentUpon>frmAdministrar.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmArticulos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +66,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmAdministrar.resx">
+      <DependentUpon>frmAdministrar.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmArticulos.resx">
       <DependentUpon>frmArticulos.cs</DependentUpon>
     </EmbeddedResource>
