Modificar y eliminar de articuloNegocio, cargar de listado e imagen

--- a/Grupo 7A/Grupo 7A.csproj
+++ b/Grupo 7A/Grupo 7A.csproj
@@ -97,5 +97,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\dominio\dominio.csproj">
+      <Project>{a5311d68-6812-4173-9446-41ecc3441fb3}</Project>
+      <Name>dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\negocio\negocio.csproj">
+      <Project>{6896e417-3a61-4c4b-abdf-4c24d28e028f}</Project>
+      <Name>negocio</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
